welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday = true || vacation = true) {
                    ^sleepIn:3: error: not enough arguments for method sleepIn: (weekday: Boolean, vacation: Boolean)Boolean.
Unspecified value parameters weekday, vacation.
		sleepIn()
                       ^sleepIn:5: error: not enough arguments for method sleepIn: (weekday: Boolean, vacation: Boolean)Boolean.
Unspecified value parameters weekday, vacation.
		!sleepIn()
                        ^sleepIn:7: error: not enough arguments for method sleepIn: (weekday: Boolean, vacation: Boolean)Boolean.
Unspecified value parameters weekday, vacation.
	sleepIn()
               ^